tests/negative/struct_errors/unknown_field_access.nano
# Expected error: Struct 'Point' has no field 'z'
# Hint: Available fields: x y

struct Point {
    x: int
    y: int
}

fn main() -> int {
    let p: Point = Point { x: 1, y: 2 }
    return p.z
}
